# PKA_RAG

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TASKS.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  streamlit_app.py
app/api/: routes.py
app/config/: settings.py
app/models/: schemas.py
app/rag/: chat_service.py  document_loader.py  embedding_service.py  prompt_builder.py  retriever.py  text_splitter.py  vector_store.py
app/services/: document_service.py
app/utils/: exceptions.py  logging.py
scripts/: eval_dataset.json  evaluate.py
tests/: conftest.py  test_api.py  test_chat_service.py  test_document_loader.py  test_retriever.py  test_text_splitter.py  test_vector_store.py
